# FastTransfer

./: .editorconfig  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
apps/desktop/src/: App.tsx  index.css  main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.fasttransfer-desktop/certs/: receiver-key.der
apps/desktop/src-tauri/.fasttransfer-desktop/trust/certs/: laroya-5000.der
apps/desktop/src-tauri/.fasttransfer-desktop/trust/receivers/: laroya-5000.trust
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: tauriClient.ts
apps/mobile/: README.md
crates/chunker/: Cargo.toml
crates/chunker/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/integrity/: Cargo.toml
crates/integrity/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  streaming.rs
crates/quic-transport/: Cargo.toml
crates/quic-transport/src/: lib.rs
crates/resume/: Cargo.toml
crates/resume/src/: lib.rs  streaming.rs
crates/transfer-core/: Cargo.toml
crates/transfer-core/src/: file_io.rs  lib.rs  local_copy.rs  progress.rs  streaming.rs
services/control-plane/: README.md  go.mod  main.go
services/relay/: README.md
