[package]
name = "protocol"
description = "Shared protocol types for FastTransfer."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
integrity.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
