[package]
name = "resume"
description = "Resume state management for FastTransfer."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
integrity.workspace = true
protocol.workspace = true

[lints]
workspace = true
